# demon

./: .gitignore  .gitmodules  CMakeLists.txt  Cargo.toml  README.md  build.rs  demon.ini  replacements.json
c_mine/: Cargo.toml  build.rs
c_mine/functions/: alias.json  cache.json  demon.json  tag.json
c_mine/globals/: cache.json  demon.json  tag.json
c_mine/hook/: annoyances.json  bink.json  bitmap.json  collision.json  console.json  data_table.json  draw_string.json  error.json  game_engine.json  hud.json  init.json  input.json  math.json  memory.json  model.json  motion_sensor.json  multiplayer.json  object.json  player.json  powerups.json  random.json  rasterizer.json  scenario.json  scoreboard.json  script.json  sound.json  string.json  tag.json  time.json  window.json
c_mine/src/: lib.rs
demon/: Cargo.toml  build.rs
demon/c_src/: error.c  terminal.c
demon/src/: allocator.rs  bink.rs  collision.rs  console.rs  crc32.rs  error_log.rs  file.rs  game_engine.rs  globals.rs  id.rs  ini.rs  init.rs  input.rs  lib.rs  map.rs  model.rs  multiplayer.rs  object.rs  panic.rs  player.rs  random.rs  rasterizer.rs  scenario.rs  script.rs  scrollback.rs  string.rs  tag.rs  timing.rs  util.rs  window.rs
demon/src/bink/: c.rs  hsc.rs
demon/src/bitmap/: c.rs
demon/src/collision/: bsp3d.rs  c.rs
demon/src/console/: c.rs  hsc.rs  tab_completion.rs
demon/src/init/: c.rs  hook.rs
demon/src/input/: c.rs  mouse.rs
demon/src/interface/: c.rs
demon/src/map/: hsc.rs
demon/src/math/: c.rs  powi.rs
demon/src/memory/: table.rs
demon/src/model/: c.rs
demon/src/multiplayer/: c.rs  chat.rs  game_engine.rs  hsc.rs  item_collection.rs  map_list.rs  server.rs
demon/src/multiplayer/map_list/: c.rs
demon/src/object/: c.rs  hsc.rs  weapon.rs
demon/src/object/hsc/: cheat_empty_ammo.rs  cheat_healthpack.rs  cheat_max_ammo.rs  debug_player_address.rs  demon_cheat_healthpack.rs  demon_cheat_max_ammo.rs  demon_debug_player_address.rs
demon/src/object/weapon/: c.rs
demon/src/panic/: c.rs
demon/src/player/: c.rs  player_effect.rs
demon/src/random/: c.rs  lcg.rs  random_directions.rs
demon/src/rasterizer/: c.rs  d3d9.rs  draw_string.rs  font.rs  hud.rs  motion_sensor.rs  player_colors.rs  scoreboard.rs
demon/src/rasterizer/d3d9/: c.rs
demon/src/rasterizer/draw_string/: c.rs
demon/src/rasterizer/hud/: c.rs
demon/src/rasterizer/scoreboard/: color.rs  heading.rs  sortable_score.rs  strings.rs  verbose.rs
demon/src/scenario/: c.rs
demon/src/script/: c.rs  cls.rs  crash.rs  print.rs  script_doc.rs
demon/src/sound/: main_menu_music.rs
demon/src/string/: c.rs
demon/src/tag/: c.rs
demon/src/timing/: c.rs
demon/src/window/: c.rs
primitives/: Cargo.toml
primitives/src/: bounds.rs  color.rs  data.rs  enum_wrapper.rs  float.rs  lib.rs  named_tag_struct.rs  rectangle.rs  string.rs  tag_group.rs  vector.rs
source/ai/: actor_definitions.c  actor_definitions.h  ai_scenario_definitions.c  ai_scenario_definitions.h
source/bitmaps/: bitmap_group.h  bitmaps.c  bitmaps.h
source/cache/: cache_files.c  cache_files.h  cache_files_windows.c  data_file.c  data_file.h  pc_sound_cache.c  pc_texture_cache.c  physical_memory_map.c  physical_memory_map.h  sound_cache.h  texture_cache.h
source/cseries/: build_number.h  cseries.c  cseries.h  cseries_windows.c  cseries_windows.h  debug_memory.c  errors.c  errors.h  platform.h  stack_walk_windows.c
source/game/: players.h
source/input/: input.h
source/interface/: hud.c  hud.h  hud_messaging_definitions.h  terminal.c  terminal.h
source/main/: console.c  console.h  demon.c  exe_functions.c  exe_functions.h  main.c  main.h
source/math/: matrix_math.c  periodic_functions.h  real_math.c  real_math.h  real_math_debug_inlines.c
source/memory/: byte_swapping.h  crc.c  crc.h  data.c  data.h  lruv_cache.c  lruv_cache.h
source/objects/: object_definitions.c  object_definitions.h
source/physics/: bsp2d.h  bsp3d.h  collision_bsp_definitions.h
source/rasterizer/: rasterizer_geometry.h
source/render/: render.h
source/saved_games/: game_state.c  game_state.h  game_state_pc.c  game_state_procs.h
source/scenario/: fog_definitions.c  fog_definitions.h  scenario.c  scenario.h  scenario_definitions.h  sky_definitions.c  sky_definitions.h
source/sound/: sound_classes.c  sound_classes.h  sound_definitions.c  sound_definitions.h
source/structures/: detail_object_definitions.h  leaf_map.h  structure_bsp_definitions.c  structure_bsp_definitions.h
source/tag_files/: files.h  tag_files.c  tag_files.h  tag_groups.c  tag_groups.h
source/text/: draw_string.h  font_group.c  font_group.h  text_group.c  text_group.h  unicode.c  unicode.h
source/units/: unit_metagame.h
src/: console.rs  draw_string.rs  globals.rs  id.rs  init.rs  input.rs  lib.rs  math.rs  memory.rs  motion_sensor.rs  mouse.rs  multiplayer.rs  object.rs  panic.rs  player.rs  rasterizer.rs  scoreboard.rs  script.rs  sound.rs  string.rs  table.rs  tag.rs  timing.rs  ui.rs  util.rs
src/crc32/: test.rs
src/init/: hook.rs
src/input/: mouse.rs
src/math/: c.rs  powf.rs  sqrt.rs
src/memory/: table.rs
src/object/: weapon.rs
src/rasterizer/: draw_string.rs  hud.rs  motion_sensor.rs  player_colors.rs  scoreboard.rs
src/rasterizer/hud/: c.rs
src/rasterizer/scoreboard/: color.rs  heading.rs  verbose.rs
src/sound/: main_menu_music.rs  sound_looping.rs
src/tag/: c.rs
tag_structs/: Cargo.toml
tag_structs/src/: lib.rs
tag_structs_gen/: Cargo.toml
tag_structs_gen/src/: lib.rs
utils/: halo_cache_demon.bps
utils/scythunk/: Cargo.toml
utils/scythunk/.cargo/: config.toml
utils/scythunk/src/: lib.rs  util.rs
