[workspace]
members = [
    "demon",
    "c_mine",
    "tag_structs",
    "tag_structs_gen",
    "primitives"
]
resolver = "3"

[profile.dev]
panic = "abort"
opt-level = 0
debug = true
strip = "none"
debug-assertions = false
overflow-checks = false
lto = false

[profile.release]
panic = "abort"
opt-level = 3
debug = true
strip = "none"
debug-assertions = false
overflow-checks = false
lto = true
